Icon changes for who we are page

--- a/connectusainc.com/index.html
+++ b/connectusainc.com/index.html
@@ -1953,7 +1953,7 @@
                       <div class="elementor-widget-container">
                         <div class="octf-search octf-btn-cta">
                           <div class="toggle-search octf-cta-icons">
-                            <i class="flaticon-loupe"></i>
+                            <i class="flaticon-search"></i>
                           </div>
                           <!-- Form Search on Header -->
                           <div class="h-search-form-field">
@@ -1976,7 +1976,7 @@
                                     name="s"
                                 /></label>
                                 <button type="submit" class="search-submit">
-                                  <i class="flaticon-loupe"></i>
+                                  <i class="flaticon-search"></i>
                                 </button>
                               </form>
                             </div>
