Icon changes for close, search, and connect bridge page

--- a/connectusainc.com/index.html
+++ b/connectusainc.com/index.html
@@ -2002,7 +2002,7 @@
                           >
                             <div class="mmenu-inner">
                               <a class="mmenu-close" href="#"
-                                ><i class="flaticon-right-arrow"></i
+                                ><i class="flaticon-next"></i
                               ></a>
                               <div class="mobile-nav">
                                 <ul
