--- a/connectusainc.com/wp-content/themes/engitech/css/font/flaticon_mycollection.html
+++ b/connectusainc.com/wp-content/themes/engitech/css/font/flaticon_mycollection.html
@@ -427,12 +427,6 @@
             </div>
 
             <div class="glyph">
-                <i class="flaticon flaticon-search"></i>
-                <div class="class-name">.flaticon-search</div>
-                <div class="author-name">Author: #author-link-flaticon-search# </div>
-            </div>
-
-            <div class="glyph">
                 <i class="flaticon flaticon-report"></i>
                 <div class="class-name">.flaticon-report</div>
                 <div class="author-name">Author: #author-link-flaticon-report# </div>
@@ -448,6 +442,18 @@
                 <i class="flaticon flaticon-back"></i>
                 <div class="class-name">.flaticon-back</div>
                 <div class="author-name">Author: #author-link-flaticon-back# </div>
+            </div>
+
+            <div class="glyph">
+                <i class="flaticon flaticon-close"></i>
+                <div class="class-name">.flaticon-close</div>
+                <div class="author-name">Author: #author-link-flaticon-close# </div>
+            </div>
+
+            <div class="glyph">
+                <i class="flaticon flaticon-search"></i>
+                <div class="class-name">.flaticon-search</div>
+                <div class="author-name">Author: #author-link-flaticon-search# </div>
             </div>
 
     </section>
@@ -486,12 +492,6 @@
             </div>
             <div class="image">
                 <p>
-                    <i class="flaticon flaticon-search"></i>
-                    <span>&lt;i class=&quot;flaticon-search&quot;&gt;&lt;/i&gt;</span>
-                </p>
-            </div>
-            <div class="image">
-                <p>
                     <i class="flaticon flaticon-report"></i>
                     <span>&lt;i class=&quot;flaticon-report&quot;&gt;&lt;/i&gt;</span>
                 </p>
@@ -506,6 +506,18 @@
                 <p>
                     <i class="flaticon flaticon-back"></i>
                     <span>&lt;i class=&quot;flaticon-back&quot;&gt;&lt;/i&gt;</span>
+                </p>
+            </div>
+            <div class="image">
+                <p>
+                    <i class="flaticon flaticon-close"></i>
+                    <span>&lt;i class=&quot;flaticon-close&quot;&gt;&lt;/i&gt;</span>
+                </p>
+            </div>
+            <div class="image">
+                <p>
+                    <i class="flaticon flaticon-search"></i>
+                    <span>&lt;i class=&quot;flaticon-search&quot;&gt;&lt;/i&gt;</span>
                 </p>
             </div>
         </div>
